# sdk-examples

./: README.md
html-cdn-py/: .gitignore  README.md  pyproject.toml  tailwind.config.js
html-cdn-py/src/: __main__.py  config.py  state.py
html-cdn-py/src/server/: __init__.py  deps.py
html-cdn-py/src/server/handlers/: page.py
html-cdn-py/src/server/pages/: __init__.py  about.py  client_state.py  index.py  signup.py
html-cdn-py/static/css/: main.css
html-cdn-py/styles/: animations.css  main.css
html-cdn-py/templates/components/: cards.html  footer.html
html-cdn-py/templates/layouts/: base.html  home.html
html-cdn-py/templates/pages/: about.html  client_state.html  index.html  signup.html
react/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
react/src/: App.tsx  index.css
react/src/pages/: Analytics.tsx  Auth.tsx  ClientStatus.tsx  Home.tsx  People.tsx
